[tool.poetry]
name = "qibodb"
version = "0.0.1"
description = "Hardware setup and calibration"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^2.0.15"
pandas = "^2.0.1"
click = { version = "^8.1.3", optional = true }
rich = { version = "^13.3.5", optional = true }

[tool.poetry.extras]
cli = ["click", "rich"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
