[tool.poetry]
name = "qibodb"
version = "0.0.1"
description = "Hardware setup and calibration"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{ include = "qibodb", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.3"
pydantic = "^1.10.8"
click = { version = "^8.1.3", optional = true }
rich = { version = "^13.3.5", optional = true }

[tool.poetry.extras]
cli = ["click", "rich"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
pdbpp = "^0.10.3"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
mypy = "^1.3.0"
pylint = "^2.17.4"

[tool.poetry.scripts]
qibodb = "qibodb.cli:command"

[tool.poe.tasks]
ipy = "ipython"
lint = "pylint src --errors-only"
lint-warnings = "pylint src --exit-zero"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
# whitelist pydantic, because compiled with Cython
extension-pkg-whitelist = "pydantic"
